--- a/jsonld-pandas.ipynb
+++ b/jsonld-pandas.ipynb
@@ -24,16 +24,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = g.query(\"\"\"\n",
+    "PREFIX ramphs: <http://purl.org/roman-amphitheaters/resource/>\n",
+    "PREFIX gj: <https://purl.org/geojson/vocab#>\n",
+    "PREFIX ramphs-p: <http://purl.org/roman-amphitheaters/properties#>\n",
+    "PREFIX dcterms: <http://purl.org/dc/terms/>\n",
+    "SELECT ?title ?capacity WHERE {\n",
+    "\n",
+    "?s gj:properties/ramphs-p:capacity/ramphs-p:quantity ?capacity .\n",
+    "?s gj:properties/dcterms:title ?title\n",
+    "}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1199c3cc0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11cea9b00>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -49,17 +67,6 @@
     }
    ],
    "source": [
-    "results = g.query(\"\"\"\n",
-    "PREFIX ramphs: <http://purl.org/roman-amphitheaters/resource/>\n",
-    "PREFIX gj: <https://purl.org/geojson/vocab#>\n",
-    "PREFIX ramphs-p: <http://purl.org/roman-amphitheaters/properties#>\n",
-    "PREFIX dcterms: <http://purl.org/dc/terms/>\n",
-    "SELECT ?title ?capacity WHERE {\n",
-    "\n",
-    "?s gj:properties/ramphs-p:capacity/ramphs-p:quantity ?capacity .\n",
-    "?s gj:properties/dcterms:title ?title\n",
-    "}\"\"\")\n",
-    "\n",
     "caps = []\n",
     "for row in results:\n",
     "    caps.append(float(row.capacity))\n",
