--- a/jsonld-widgets.ipynb
+++ b/jsonld-widgets.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Note: If you're running this in Binder, you might get warnings about module compatibility. Should be OK to ignore those, or at least was in Summer of 2018.\n",
     "\n",
-    "To this data as a map see:\n",
+    "To view this data as a map see:\n",
     "\n",
     "https://github.com/sfsheath/roman-amphitheaters/blob/master/roman-amphitheaters.geojson"
    ]
